counter object test

--- a/CSC506_discussion1_scratchpad.ipynb
+++ b/CSC506_discussion1_scratchpad.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T03:24:49.166295Z",
-     "start_time": "2022-07-20T03:24:49.160813Z"
+     "end_time": "2022-07-20T04:02:23.236139Z",
+     "start_time": "2022-07-20T04:02:23.229134Z"
     }
    },
    "outputs": [],
@@ -78,6 +78,107 @@
    ],
    "source": [
     "Counter(sorted('Satan')), Counter(sorted('Santa'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-20T04:01:22.462999Z",
+     "start_time": "2022-07-20T04:01:22.455725Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted('Satan') == sorted('Santa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-20T04:03:37.752968Z",
+     "start_time": "2022-07-20T04:03:37.745288Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Counter({'S': 1, 'a': 2, 't': 1, 'n': 1}),\n",
+       " Counter({'S': 1, 'a': 2, 'n': 1, 't': 1}))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter('Satan'), Counter('Santa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-20T04:04:27.668521Z",
+     "start_time": "2022-07-20T04:04:27.661130Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter('Satan') == Counter('Santa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-20T04:11:00.748505Z",
+     "start_time": "2022-07-20T04:11:00.741622Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "collections.Counter"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Counter('Satan'))"
    ]
   },
   {
