testing with incorrect keys

--- a/CSC506_discussion1_scratchpad.ipynb
+++ b/CSC506_discussion1_scratchpad.ipynb
@@ -219,11 +219,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T05:38:58.851671Z",
-     "start_time": "2022-07-27T05:38:54.321178Z"
+     "end_time": "2022-07-27T06:14:00.190976Z",
+     "start_time": "2022-07-27T06:13:56.155633Z"
     }
    },
    "outputs": [
@@ -231,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter an integer key to search for: 350000\n",
+      "Enter an integer key to search for: 86587659809\n",
       "\n"
      ]
     }
@@ -243,11 +243,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T05:38:59.692671Z",
-     "start_time": "2022-07-27T05:38:59.631339Z"
+     "end_time": "2022-07-27T06:14:04.768767Z",
+     "start_time": "2022-07-27T06:14:04.711606Z"
     }
    },
    "outputs": [],
@@ -258,11 +258,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T05:39:00.889866Z",
-     "start_time": "2022-07-27T05:39:00.883714Z"
+     "end_time": "2022-07-27T06:14:08.891865Z",
+     "start_time": "2022-07-27T06:14:08.885452Z"
     }
    },
    "outputs": [
@@ -270,7 +270,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear search: 350000 was not found with 350000 comparisons.\n"
+      "Linear search: 86587659809 was not found with 350000 comparisons.\n"
      ]
     }
    ],
@@ -283,11 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T05:39:03.777143Z",
-     "start_time": "2022-07-27T05:39:03.764295Z"
+     "end_time": "2022-07-27T06:14:28.049796Z",
+     "start_time": "2022-07-27T06:14:28.038140Z"
     }
    },
    "outputs": [],
@@ -299,11 +299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T05:39:04.648133Z",
-     "start_time": "2022-07-27T05:39:04.642858Z"
+     "end_time": "2022-07-27T06:14:29.614867Z",
+     "start_time": "2022-07-27T06:14:29.608251Z"
     }
    },
    "outputs": [
@@ -311,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Binary search: 350000 was not found with 19 comparisons.\n"
+      "Binary search: 86587659809 was not found with 19 comparisons.\n"
      ]
     }
    ],
@@ -324,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T05:39:05.993814Z",
-     "start_time": "2022-07-27T05:39:05.988301Z"
+     "end_time": "2022-07-27T06:14:35.682227Z",
+     "start_time": "2022-07-27T06:14:35.677994Z"
     }
    },
    "outputs": [],
