string edit distance problem

--- a/CSC506_discussion1_scratchpad.ipynb
+++ b/CSC506_discussion1_scratchpad.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-22T08:34:37.399279Z",
-     "start_time": "2022-07-22T08:34:37.392461Z"
+     "end_time": "2022-07-28T04:28:20.802804Z",
+     "start_time": "2022-07-28T04:28:20.797012Z"
     }
    },
    "outputs": [],
@@ -1360,6 +1360,90 @@
    ],
    "source": [
     "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-28T04:29:42.882716Z",
+     "start_time": "2022-07-28T04:29:42.875187Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'a': 1,\n",
+       "         'g': 1,\n",
+       "         'h': 1,\n",
+       "         'i': 1,\n",
+       "         'l': 1,\n",
+       "         'm': 1,\n",
+       "         'o': 1,\n",
+       "         'r': 1,\n",
+       "         't': 1})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(sorted('algorithm'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-28T04:31:53.103909Z",
+     "start_time": "2022-07-28T04:31:53.095778Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 2), ('l', 2), ('g', 1), ('i', 1), ('o', 1), ('r', 1), ('t', 1)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(sorted('alligator')).most_common()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-28T05:15:22.261128Z",
+     "start_time": "2022-07-28T05:15:22.248690Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['a', 'g', 'h', 'i', 'l', 'm', 'o', 'r', 't'],\n",
+       " ['a', 'a', 'g', 'i', 'l', 'l', 'o', 'r', 't'])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted('algorithm'), sorted('alligator')"
    ]
   },
   {
