for loop for copy letters

--- a/CSC506_discussion1_scratchpad.ipynb
+++ b/CSC506_discussion1_scratchpad.ipynb
@@ -1448,6 +1448,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-28T06:58:44.640855Z",
+     "start_time": "2022-07-28T06:58:44.632841Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['a', 'g', 'h', 'i', 'l', 'm', 'o', 'r', 't'],\n",
+       " ['a', 'a', 'g', 'i', 'l', 'l', 'o', 'r', 't'])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original = 'algorithm'\n",
+    "transform = 'alligator'\n",
+    "original_sorted = sorted(original)\n",
+    "transform_sorted = sorted(transform)\n",
+    "original_sorted, transform_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-28T06:58:45.071851Z",
+     "start_time": "2022-07-28T06:58:45.062404Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['h', 'm'], ['a', 'l'], ['a', 'g', 'i', 'l', 'o', 'r', 't'], 35)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_leftover = []\n",
+    "transform_verify = []\n",
+    "cost = 0\n",
+    "\n",
+    "for char in original_sorted:\n",
+    "    if char in transform_sorted:\n",
+    "        transform_verify.append(char)\n",
+    "        transform_sorted.remove(char)\n",
+    "        cost += 5\n",
+    "    else:\n",
+    "        original_leftover.append(char)\n",
+    "        \n",
+    "        \n",
+    "original_leftover, transform_sorted, transform_verify, cost"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
