--- a/CSC506_discussion1_scratchpad.ipynb
+++ b/CSC506_discussion1_scratchpad.ipynb
@@ -1448,11 +1448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T06:58:44.640855Z",
-     "start_time": "2022-07-28T06:58:44.632841Z"
+     "end_time": "2022-07-28T07:14:02.262951Z",
+     "start_time": "2022-07-28T07:14:02.255338Z"
     }
    },
    "outputs": [
@@ -1463,7 +1463,7 @@
        " ['a', 'a', 'g', 'i', 'l', 'l', 'o', 'r', 't'])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,11 +1478,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T06:58:45.071851Z",
-     "start_time": "2022-07-28T06:58:45.062404Z"
+     "end_time": "2022-07-28T07:14:03.098527Z",
+     "start_time": "2022-07-28T07:14:03.089690Z"
     }
    },
    "outputs": [
@@ -1492,7 +1492,7 @@
        "(['h', 'm'], ['a', 'l'], ['a', 'g', 'i', 'l', 'o', 'r', 't'], 35)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,6 +1512,35 @@
     "        \n",
     "        \n",
     "original_leftover, transform_sorted, transform_verify, cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-28T07:14:04.979955Z",
+     "start_time": "2022-07-28T07:14:04.971752Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if len(original_leftover) == len(transform_sorted):\n",
+    "    cost += len(original_leftover) * 40\n",
+    "elif len(original_leftover) > len(transform_sorted):\n",
+    "    cost += len(original_leftover) * 20 + (len(original_leftover) - len(transform_sorted)) * 20\n",
+    "cost"
    ]
   },
   {
