--- a/CSC506_discussion1_scratchpad.ipynb
+++ b/CSC506_discussion1_scratchpad.ipynb
@@ -1448,11 +1448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T07:14:02.262951Z",
-     "start_time": "2022-07-28T07:14:02.255338Z"
+     "end_time": "2022-07-29T04:24:10.046465Z",
+     "start_time": "2022-07-29T04:24:10.036911Z"
     }
    },
    "outputs": [
@@ -1463,7 +1463,7 @@
        " ['a', 'a', 'g', 'i', 'l', 'l', 'o', 'r', 't'])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,11 +1478,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T07:14:03.098527Z",
-     "start_time": "2022-07-28T07:14:03.089690Z"
+     "end_time": "2022-07-29T04:24:10.498281Z",
+     "start_time": "2022-07-29T04:24:10.486068Z"
     }
    },
    "outputs": [
@@ -1492,7 +1492,7 @@
        "(['h', 'm'], ['a', 'l'], ['a', 'g', 'i', 'l', 'o', 'r', 't'], 35)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,11 +1516,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-28T07:14:04.979955Z",
-     "start_time": "2022-07-28T07:14:04.971752Z"
+     "end_time": "2022-07-29T04:24:10.942788Z",
+     "start_time": "2022-07-29T04:24:10.932985Z"
     }
    },
    "outputs": [
@@ -1530,7 +1530,7 @@
        "115"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1538,8 +1538,15 @@
    "source": [
     "if len(original_leftover) == len(transform_sorted):\n",
     "    cost += len(original_leftover) * 40\n",
+    "\n",
     "elif len(original_leftover) > len(transform_sorted):\n",
-    "    cost += len(original_leftover) * 20 + (len(original_leftover) - len(transform_sorted)) * 20\n",
+    "    cost += len(transform_sorted) * 40\n",
+    "    cost += ((len(original_leftover) - (len(transform_sorted)))) * 20\n",
+    "\n",
+    "else:\n",
+    "    cost += len(original_leftover) * 40\n",
+    "    cost += ((len(transform_sorted) - (len(original_leftover)))) * 20\n",
+    "\n",
     "cost"
    ]
   },
