--- a/CSC506_discussion1_scratchpad.ipynb
+++ b/CSC506_discussion1_scratchpad.ipynb
@@ -1448,28 +1448,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 121,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-29T04:24:10.046465Z",
-     "start_time": "2022-07-29T04:24:10.036911Z"
+     "end_time": "2022-07-29T05:26:26.029669Z",
+     "start_time": "2022-07-29T05:26:26.019317Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['a', 'g', 'h', 'i', 'l', 'm', 'o', 'r', 't'],\n",
+       "(['a', 'b', 'g', 'h', 'i', 'l', 'm', 'o', 'r', 't'],\n",
        " ['a', 'a', 'g', 'i', 'l', 'l', 'o', 'r', 't'])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "original = 'algorithm'\n",
+    "original = 'algorithmb'\n",
     "transform = 'alligator'\n",
     "original_sorted = sorted(original)\n",
     "transform_sorted = sorted(transform)\n",
@@ -1478,76 +1478,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 122,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-29T04:24:10.498281Z",
-     "start_time": "2022-07-29T04:24:10.486068Z"
+     "end_time": "2022-07-29T05:26:26.475878Z",
+     "start_time": "2022-07-29T05:26:26.468932Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['h', 'm'], ['a', 'l'], ['a', 'g', 'i', 'l', 'o', 'r', 't'], 35)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "original_leftover = []\n",
-    "transform_verify = []\n",
+    "transform_copied = []\n",
     "cost = 0\n",
     "\n",
     "for char in original_sorted:\n",
     "    if char in transform_sorted:\n",
-    "        transform_verify.append(char)\n",
+    "        #copies to new list and removes from old\n",
+    "        transform_copied.append(char)\n",
     "        transform_sorted.remove(char)\n",
     "        cost += 5\n",
     "    else:\n",
+    "        #characters that were not copied\n",
     "        original_leftover.append(char)\n",
-    "        \n",
-    "        \n",
-    "original_leftover, transform_sorted, transform_verify, cost"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 123,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-29T04:24:10.942788Z",
-     "start_time": "2022-07-29T04:24:10.932985Z"
+     "end_time": "2022-07-29T05:26:26.955337Z",
+     "start_time": "2022-07-29T05:26:26.943917Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "algorithmb --> alligator\n",
+      "algorithmb: 10 characters, alligator: 9 characters\n",
+      "7 characters copied: ['a', 'g', 'i', 'l', 'o', 'r', 't']\n",
+      "3 characters deleted and/or inserted: ['b', 'h', 'm'] --> ['a', 'l']\n",
+      "Total Edit Cost: 135 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(original_leftover) == len(transform_sorted):\n",
+    "    # delete + insert letters costs 40 points for each\n",
+    "    cost += len(original_leftover) * 40\n",
+    "    \n",
+    "    print(f'{original} --> {transform}')\n",
+    "    print(f'Original and new words are both: {len(original)} characters')\n",
+    "    print(f'{len(transform_copied)} characters copied: {transform_copied}')\n",
+    "    print(f'{len(original_leftover)} characters deleted and inserted: {original_leftover} --> {transform_sorted}')\n",
+    "    print(f'Total Edit Cost: {cost} points')\n",
+    "    \n",
+    "elif len(original_leftover) > len(transform_sorted):\n",
+    "    #cost for delete + insert\n",
+    "    cost += len(transform_sorted) * 40\n",
+    "    \n",
+    "    #cost for deleting extra characters from original \n",
+    "    cost += ((len(original_leftover) - (len(transform_sorted)))) * 20\n",
+    "    print(f'{original} --> {transform}')\n",
+    "    print(f'{original}: {len(original)} characters, {transform}: {len(transform)} characters')\n",
+    "    print(f'{len(transform_copied)} characters copied: {transform_copied}')\n",
+    "    print(f'{len(original_leftover)} characters deleted and/or inserted: {original_leftover} --> {transform_sorted}')\n",
+    "    print(f'Total Edit Cost: {cost} points')\n",
+    "\n",
+    "else:\n",
+    "    #delete + insert\n",
+    "    cost += len(original_leftover) * 40\n",
+    "    \n",
+    "    #cost for inserting extra characters to match transformed word\n",
+    "    cost += ((len(transform_sorted) - (len(original_leftover)))) * 20\n",
+    "    \n",
+    "    print(f'{original} --> {transform}')\n",
+    "    print(f'{original}: {len(original)} characters, {transform}: {len(transform)} characters')\n",
+    "    print(f'{len(transform_copied)} characters copied: {transform_copied}')\n",
+    "    print(f'{len(transform_sorted)} characters deleted and/or inserted: {original_leftover} --> {transform_sorted}')\n",
+    "    print(f'Total Edit Cost: {cost} points')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-29T05:24:52.323855Z",
+     "start_time": "2022-07-29T05:24:52.317042Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "115"
+       "True"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "if len(original_leftover) == len(transform_sorted):\n",
-    "    cost += len(original_leftover) * 40\n",
+    "Counter(transform_copied + transform_sorted) == Counter(transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-29T05:58:55.413766Z",
+     "start_time": "2022-07-29T05:58:55.401385Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def word_transform():\n",
+    "    '''Requests and sorts input strings'''\n",
+    "    original = input('Enter the original word: ').lower()\n",
+    "    transform = input('Enter the word to edit into:  ').lower()\n",
+    "    print()\n",
+    "    original_sorted = sorted(original)\n",
+    "    transform_sorted = sorted(transform)\n",
+    "    return original, transform, original_sorted, transform_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-29T05:48:07.007627Z",
+     "start_time": "2022-07-29T05:48:07.000103Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def copy_char(original_sorted, transform_sorted):\n",
+    "    original_leftover = []\n",
+    "    transform_copied = []\n",
+    "    cost = 0\n",
     "\n",
-    "elif len(original_leftover) > len(transform_sorted):\n",
-    "    cost += len(transform_sorted) * 40\n",
-    "    cost += ((len(original_leftover) - (len(transform_sorted)))) * 20\n",
+    "    for char in original_sorted:\n",
+    "        if char in transform_sorted:\n",
+    "            #copies to new list and removes from old\n",
+    "            transform_copied.append(char)\n",
+    "            transform_sorted.remove(char)\n",
+    "            cost += 5\n",
+    "        else:\n",
+    "            #characters that were not copied\n",
+    "            original_leftover.append(char)\n",
+    "            \n",
+    "    return transform_sorted, transform_copied, original_leftover, cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-29T05:50:43.434507Z",
+     "start_time": "2022-07-29T05:50:43.423258Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def del_insert(original, transform, transform_sorted, transform_copied, original_leftover, cost):\n",
+    "    if len(original_leftover) == len(transform_sorted):\n",
+    "    # delete + insert letters costs 40 points for each\n",
+    "        cost += len(original_leftover) * 40\n",
+    "    \n",
+    "        print(f'{original} --> {transform}')\n",
+    "        print(f'Original and new words are both: {len(original)} characters')\n",
+    "        print(f'{len(transform_copied)} characters copied: {transform_copied}')\n",
+    "        print(f'{len(original_leftover)} characters deleted and inserted: {original_leftover} --> {transform_sorted}')\n",
+    "        print(f'Total Edit Cost: {cost} points')\n",
+    "    \n",
+    "    elif len(original_leftover) > len(transform_sorted):\n",
+    "        #cost for delete + insert\n",
+    "        cost += len(transform_sorted) * 40\n",
+    "    \n",
+    "        #cost for deleting extra characters from original \n",
+    "        cost += ((len(original_leftover) - (len(transform_sorted)))) * 20\n",
+    "        print(f'{original} --> {transform}')\n",
+    "        print(f'{original}: {len(original)} characters, {transform}: {len(transform)} characters')\n",
+    "        print(f'{len(transform_copied)} characters copied: {transform_copied}')\n",
+    "        print(f'{len(original_leftover)} characters deleted and/or inserted: {original_leftover} --> {transform_sorted}')\n",
+    "        print(f'Total Edit Cost: {cost} points')\n",
     "\n",
-    "else:\n",
-    "    cost += len(original_leftover) * 40\n",
-    "    cost += ((len(transform_sorted) - (len(original_leftover)))) * 20\n",
-    "\n",
-    "cost"
+    "    else:\n",
+    "        #delete + insert\n",
+    "        cost += len(original_leftover) * 40\n",
+    "    \n",
+    "        #cost for inserting extra characters to match transformed word\n",
+    "        cost += ((len(transform_sorted) - (len(original_leftover)))) * 20\n",
+    "    \n",
+    "        print(f'{original} --> {transform}')\n",
+    "        print(f'{original}: {len(original)} characters, {transform}: {len(transform)} characters')\n",
+    "        print(f'{len(transform_copied)} characters copied: {transform_copied}')\n",
+    "        print(f'{len(transform_sorted)} characters deleted and/or inserted: {original_leftover} --> {transform_sorted}')\n",
+    "        print(f'Total Edit Cost: {cost} points')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-29T05:53:51.301896Z",
+     "start_time": "2022-07-29T05:53:51.296372Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def run_string_edit():\n",
+    "    #gets input\n",
+    "    original, transform, original_sorted, transform_sorted = word_transform()\n",
+    "    \n",
+    "    #calculates cost for characters that can be copied\n",
+    "    transform_sorted, transform_copied, original_leftover, cost = copy_char(original_sorted, transform_sorted)\n",
+    "    \n",
+    "    #calculates cost for deleted and/or inserted characters and prints out report\n",
+    "    del_insert(original, transform, transform_sorted, transform_copied, original_leftover, cost)"
    ]
   },
   {
