3 runs of different word length

--- a/string_edit_test.ipynb
+++ b/string_edit_test.ipynb
@@ -46,13 +46,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-07-29T06:01:31.455Z"
+     "end_time": "2022-07-29T06:07:11.460556Z",
+     "start_time": "2022-07-29T06:07:06.328897Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the original word: Runtime\n",
+      "Enter the word to edit into:  Error\n",
+      "\n",
+      "runtime --> error\n",
+      "runtime: 7 characters, error: 5 characters\n",
+      "2 characters copied: ['e', 'r']\n",
+      "5 characters deleted and/or inserted: ['i', 'm', 'n', 't', 'u'] --> ['o', 'r', 'r']\n",
+      "\n",
+      "Total Edit Cost: 170 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_string_edit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-29T06:08:14.125273Z",
+     "start_time": "2022-07-29T06:07:59.986215Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the original word: Raven\n",
+      "Enter the word to edit into:  Nevermore\n",
+      "\n",
+      "raven --> nevermore\n",
+      "raven: 5 characters, nevermore: 9 characters\n",
+      "4 characters copied: ['e', 'n', 'r', 'v']\n",
+      "5 characters deleted and/or inserted: ['a'] --> ['e', 'e', 'm', 'o', 'r']\n",
+      "\n",
+      "Total Edit Cost: 140 points\n"
+     ]
+    }
+   ],
    "source": [
     "run_string_edit()"
    ]
