--- a/CT3_option1.ipynb
+++ b/CT3_option1.ipynb
@@ -28,7 +28,6 @@
     "def selection_sort(numbers):\n",
     "    # A variable to hold the number of item comparisons\n",
     "    comparisons = 0\n",
-    "    \n",
     "    for i in range(len(numbers)-1):\n",
     "        # Find index of smallest remaining element\n",
     "        index_smallest = i\n",
@@ -36,12 +35,10 @@
     "            comparisons = comparisons + 1\n",
     "            if numbers[j] < numbers[index_smallest]:\n",
     "                index_smallest = j\n",
-    "\n",
     "        # Swap numbers[i] and numbers[index_smallest]\n",
     "        temp = numbers[i]\n",
     "        numbers[i] = numbers[index_smallest]\n",
     "        numbers[index_smallest] = temp\n",
-    "\n",
     "    return comparisons"
    ]
   },
@@ -126,7 +123,6 @@
     "def insertion_sort(num_list):\n",
     "    for i in range(1, len(num_list)):\n",
     "        j = i\n",
-    "\n",
     "        # Insert num_list[i] into sorted part \n",
     "        # stopping once num_list[i] in correct position\n",
     "        while j > 0 and num_list[j] < num_list[j - 1]:\n",
@@ -267,48 +263,37 @@
     "    # at least 2 elements\n",
     "    if end_index <= start_index:\n",
     "        return\n",
-    "\n",
     "    # Partition the list segment\n",
     "    high = partition(numbers, start_index, end_index)\n",
-    "\n",
     "    # Recursively sort the left segment\n",
     "    quicksort(numbers, start_index, high)\n",
-    "\n",
     "    # Recursively sort the right segment\n",
     "    quicksort(numbers, high + 1, end_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-04T04:57:26.653777Z",
-     "start_time": "2022-08-04T04:57:26.644700Z"
+     "end_time": "2022-08-05T05:04:19.779456Z",
+     "start_time": "2022-08-05T05:04:19.481646Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UNSORTED: [469, 30, 56, 186, 172, 371, 98, 240, 252, 400, 489, 107, 140, 41, 196, 102, 118, 349, 220, 476, 485, 277, 146, 442, 376, 449, 213, 237, 327, 76, 52, 312, 269, 381, 446, 233, 447, 5, 497, 467, 348, 352, 257, 131, 311, 394, 58, 343, 441, 121, 462, 126, 318, 20, 253, 444, 328, 332, 481, 440, 320, 193, 117, 340, 99, 392, 407, 372, 226, 404, 363, 64, 247, 241, 298, 31, 499, 419, 453, 305, 205, 468, 191, 143, 255, 473, 335, 304, 176, 415, 7, 263, 133, 427, 380, 65, 498, 134, 96, 443, 466, 274, 224, 426, 408, 465, 322, 61, 251, 16, 229, 42, 411, 108, 3, 258, 21, 374, 290, 414, 123, 116, 347, 198, 321, 77, 18, 461, 141, 287, 254, 350, 2, 130, 187, 283, 114, 435, 420, 493, 57, 34, 122, 491, 194, 261, 111, 33, 23, 445, 158, 17, 452, 81, 37, 314, 177, 93, 308, 50, 156, 120, 459, 471, 43, 477, 359, 82, 169, 145, 434, 78, 366, 227, 395, 60, 214, 211, 168, 424, 484, 208, 51, 495, 360, 266, 183, 106, 26, 317, 94, 295, 410, 155, 110, 70, 429, 358, 95, 433, 189, 79, 307, 71, 457, 268, 86, 405, 92, 45, 406, 91, 55, 284, 202, 119, 448, 132, 436, 272, 179, 378, 301, 137, 336, 398, 184, 299, 488, 12, 165, 425, 29, 479, 170, 53, 315, 422, 142, 242, 375, 379, 438, 280, 339, 383, 421, 431, 199, 68, 203, 66, 128, 144, 439, 85, 342, 463, 418, 333, 384, 324, 265, 496, 346, 231, 470, 32, 19, 190, 164, 243, 10, 382, 54, 207, 27, 292, 326, 204, 46, 396, 219, 200, 300, 40, 74, 316, 330, 75, 36, 279, 154, 474, 9, 361, 256, 171, 264, 310, 161, 90, 450, 289, 0, 492, 309, 181, 173, 416, 25, 393, 373, 14, 285, 478, 455, 454, 180, 11, 59, 296, 385, 4, 432, 129, 389, 458, 464, 401, 149, 423, 397, 206, 162, 222, 136, 262, 288, 182, 147, 150, 483, 403, 337, 390, 103, 388, 482, 236, 239, 319, 22, 297, 494, 460, 148, 217, 480, 160, 486, 294, 88, 323, 417, 105, 249, 356, 100, 234, 362, 353, 195, 139, 355, 166, 329, 73, 44, 278, 67, 185, 49, 192, 386, 28, 83, 13, 437, 80, 338, 291, 451, 365, 135, 153, 84, 281, 275, 409, 1, 345, 188, 367, 228, 428, 124, 487, 351, 472, 113, 35, 430, 175, 286, 399, 313, 201, 273, 101, 163, 370, 24, 218, 357, 344, 490, 8, 302, 246, 270, 475, 6, 259, 238, 377, 391, 72, 212, 402, 334, 232, 97, 138, 387, 47, 62, 364, 456, 63, 267, 197, 178, 221, 152, 159, 38, 210, 125, 354, 69, 48, 209, 413, 276, 104, 250, 248, 235, 325, 215, 15, 412, 368, 271, 306, 341, 87, 303, 331, 225, 174, 109, 39, 151, 157, 245, 260, 89, 115, 282, 293, 244, 216, 127, 369, 223, 230, 167, 112]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Main program to test the quicksort algorithm.\n",
-    "numbers = random.sample(range(500),500)\n",
-    "print('UNSORTED:', numbers)"
+    "numbers = random.sample(range(350000),350000)\n",
+    "#print('UNSORTED:', numbers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 98,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-04T04:57:28.465893Z",
-     "start_time": "2022-08-04T04:57:28.459958Z"
+     "end_time": "2022-08-05T05:04:23.138168Z",
+     "start_time": "2022-08-05T05:04:22.015625Z"
     }
    },
    "outputs": [],
@@ -357,7 +342,6 @@
     "    merge_pos = 0                         # Position to insert merged number\n",
     "    left_pos = i                          # Initialize left partition position\n",
     "    right_pos = j + 1                     # Initialize right partition position\n",
-    "\n",
     "    # Add smallest element from left or right partition to merged numbers\n",
     "    while left_pos <= j and right_pos <= k:\n",
     "        if numbers[left_pos] <= numbers[right_pos]:\n",
@@ -367,34 +351,26 @@
     "            merged_numbers[merge_pos] = numbers[right_pos]\n",
     "            right_pos += 1\n",
     "        merge_pos = merge_pos + 1\n",
-    "\n",
     "    # If left partition is not empty, add remaining elements to merged numbers\n",
     "    while left_pos <= j:\n",
     "        merged_numbers[merge_pos] = numbers[left_pos]\n",
     "        left_pos += 1\n",
     "        merge_pos += 1\n",
-    "\n",
     "    # If right partition is not empty, add remaining elements to merged numbers\n",
     "    while right_pos <= k:\n",
     "        merged_numbers[merge_pos] = numbers[right_pos]\n",
     "        right_pos = right_pos + 1\n",
     "        merge_pos = merge_pos + 1\n",
-    "\n",
     "    # Copy merge number back to numbers\n",
     "    for merge_pos in range(merged_size):\n",
     "        numbers[i + merge_pos] = merged_numbers[merge_pos]\n",
-    "\n",
-    "\n",
     "def merge_sort(numbers, i, k):\n",
     "    j = 0\n",
-    "\n",
     "    if i < k:\n",
     "        j = (i + k) // 2  # Find the midpoint in the partition\n",
-    "\n",
     "        # Recursively sort left and right partitions\n",
     "        merge_sort(numbers, i, j)\n",
     "        merge_sort(numbers, j + 1, k)\n",
-    "\n",
     "        # Merge left and right partition in sorted order\n",
     "        merge(numbers, i, j, k)"
    ]
@@ -485,8 +461,6 @@
     "            numbers[j - gap] = temp\n",
     "            j = j - gap\n",
     "    return swaps\n",
-    "\n",
-    "          \n",
     "def shell_sort(numbers, gap_values):\n",
     "    swaps = []\n",
     "    for gap_value in gap_values:\n",
@@ -598,23 +572,18 @@
     "    buckets = []\n",
     "    for i in range(10):\n",
     "        buckets.append([])\n",
-    "\n",
     "    # Find the max length, in number of digits\n",
     "    max_digits = radix_get_max_length(numbers)\n",
-    "\n",
     "    pow_10 = 1\n",
     "    for digit_index in range(max_digits):\n",
     "        for num in numbers:\n",
     "            bucket_index = (num // pow_10) % 10\n",
     "            buckets[bucket_index].append(num)\n",
-    "\n",
     "        numbers.clear()\n",
     "        for bucket in buckets:\n",
     "            numbers.extend(bucket)\n",
     "            bucket.clear()\n",
-    "\n",
     "        pow_10 = pow_10 * 10\n",
-    "\n",
     "    negatives = []\n",
     "    non_negatives = []\n",
     "    for num in numbers:\n",
