--- a/Discussion_4.ipynb
+++ b/Discussion_4.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-10T07:44:30.753569Z",
-     "start_time": "2022-08-10T07:44:30.747247Z"
+     "end_time": "2022-08-10T07:54:07.720917Z",
+     "start_time": "2022-08-10T07:54:07.716906Z"
     }
    },
    "outputs": [],
@@ -48,11 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-10T07:40:27.345142Z",
-     "start_time": "2022-08-10T07:40:27.339014Z"
+     "end_time": "2022-08-10T07:54:09.116553Z",
+     "start_time": "2022-08-10T07:54:09.110937Z"
     },
     "scrolled": false
    },
@@ -64,6 +64,11 @@
       "___Stack1___\n",
       "\n",
       "---Top---\n",
+      "TURBO S\n",
+      "GT2RS\n",
+      "GT3RS\n",
+      "765LT\n",
+      "P1 GTR\n",
       "---Bottom---\n"
      ]
     }
@@ -174,8 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 71,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-10T07:51:20.221033Z",
+     "start_time": "2022-08-10T07:51:20.213389Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import queue\n",
@@ -183,8 +193,27 @@
     "Stack1 = queue.LifoQueue(maxsize=5)\n",
     "Stack2 = queue.LifoQueue(maxsize=5)\n",
     "\n",
-    "car_list = ['P1 GTR', '765LT', 'GT3RS','GT2RS','TURBO S']"
+    "car_list = ['P1 GTR', '765LT', 'GT3RS','GT2RS','TURBO S']\n",
+    "\n",
+    "#places items from the list into Stack1\n",
+    "for car in car_list:\n",
+    "    Stack1.put(car)\n",
+    "\n",
+    "#takes items from Stack1 and places in Stack2\n",
+    "while Stack1.empty() != True:\n",
+    "    Stack2.put(Stack1.get())\n",
+    "\n",
+    "#Puts items from Stack2 into the queue\n",
+    "while Stack2.empty() != True:\n",
+    "    Q.put(Stack2.get())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
