--- a/Discussion_4.ipynb
+++ b/Discussion_4.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "car_list = ['P1 GTR', '765LT', 'GT3RS','GT2RS','TURBO S']"
+    "car_list = ['P1 GTR', '765LT', 'GT3RS','GT2RS','TURBO S']f"
    ]
   },
   {
@@ -189,7 +189,6 @@
    "outputs": [],
    "source": [
     "import queue\n",
-    "Q = queue.Queue(maxsize=5)\n",
     "Stack1 = queue.LifoQueue(maxsize=5)\n",
     "Stack2 = queue.LifoQueue(maxsize=5)\n",
     "\n",
@@ -201,11 +200,7 @@
     "\n",
     "#takes items from Stack1 and places in Stack2\n",
     "while Stack1.empty() != True:\n",
-    "    Stack2.put(Stack1.get())\n",
-    "\n",
-    "#Puts items from Stack2 into the queue\n",
-    "while Stack2.empty() != True:\n",
-    "    Q.put(Stack2.get())"
+    "    Stack2.put(Stack1.get())"
    ]
   },
   {
