list based adts complete

--- a/CT4.ipynb
+++ b/CT4.ipynb
@@ -210,6 +210,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-12T05:53:21.906038Z",
+     "start_time": "2022-08-12T05:53:21.893359Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "queue = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-12T05:55:29.160063Z",
+     "start_time": "2022-08-12T05:55:29.151137Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#appends the list to form a queue\n",
+    "while len(queue) < 200:\n",
+    "    queue.append(random.sample(random_wordlist,1)[0])\n",
+    "    \n",
+    "#dequeues item from front of queue\n",
+    "while len(queue) > 0:\n",
+    "    queue.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-12T05:56:21.727008Z",
+     "start_time": "2022-08-12T05:56:21.721232Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#appends list then pops for 200 iterations\n",
+    "count = 0\n",
+    "while count < 200:\n",
+    "    queue.insert(0,random.sample(random_wordlist,1)[0])\n",
+    "    queue.pop()\n",
+    "    count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
