--- a/Discussion_4.ipynb
+++ b/Discussion_4.ipynb
@@ -198,7 +198,7 @@
     "for car in car_list:\n",
     "    Stack1.put(car)\n",
     "\n",
-    "#takes items from Stack1 and places in Stack2\n",
+    "#takes items from Stack1 and places in Stack\n",
     "while Stack1.empty() != True:\n",
     "    Stack2.put(Stack1.get())"
    ]
