--- a/CT4.ipynb
+++ b/CT4.ipynb
@@ -90,7 +90,8 @@
     "ExecuteTime": {
      "end_time": "2022-08-13T08:11:36.434948Z",
      "start_time": "2022-08-13T08:04:03.966114Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -162,11 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 198,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-13T08:27:53.679366Z",
-     "start_time": "2022-08-13T08:27:53.658870Z"
+     "end_time": "2022-08-14T06:18:57.283689Z",
+     "start_time": "2022-08-14T06:18:57.258331Z"
     }
    },
    "outputs": [
@@ -176,7 +177,7 @@
        "25000"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 203,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-13T08:28:19.640289Z",
-     "start_time": "2022-08-13T08:28:19.354464Z"
+     "end_time": "2022-08-14T06:20:28.752133Z",
+     "start_time": "2022-08-14T06:20:28.472193Z"
     }
    },
    "outputs": [],
@@ -394,11 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 208,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-13T08:28:38.677269Z",
-     "start_time": "2022-08-13T08:28:38.513768Z"
+     "end_time": "2022-08-14T06:23:05.591182Z",
+     "start_time": "2022-08-14T06:23:05.405263Z"
     }
    },
    "outputs": [],
@@ -592,11 +593,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 213,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-13T08:37:45.389370Z",
-     "start_time": "2022-08-13T08:37:45.159521Z"
+     "end_time": "2022-08-14T06:24:26.685344Z",
+     "start_time": "2022-08-14T06:24:26.358602Z"
     }
    },
    "outputs": [],
@@ -749,11 +750,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 218,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-13T08:40:53.291514Z",
-     "start_time": "2022-08-13T08:40:52.951019Z"
+     "end_time": "2022-08-14T06:25:28.920019Z",
+     "start_time": "2022-08-14T06:25:28.707232Z"
     }
    },
    "outputs": [],
